- Fixed bug #21197 (socket_read() outputs error with PHP_NORMAL_READ)